# ur-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl  codecov.yml  deny.toml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: coverage.yml  format_docs.yml  fuzz.yml  no-std.yml  rust.yml  udeps.yml
benches/: decode.rs
examples/: qr.rs
examples/wasm/: Cargo.toml  README.md  index.html  index.scss
examples/wasm/src/: input.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bytewords_decode.rs  bytewords_encode.rs  ur_encode.rs
src/: bytewords.rs  constants.rs  fountain.rs  lib.rs  sampler.rs  ur.rs  xoshiro.rs
