[workspace]
members = ["fuzz"]

[package]
name = "ur"
description = "A Rust implementation of Uniform Resources"
license = "MIT"
version = "0.3.0"
authors = ["Dominik Spicher <dominikspicher@gmail.com>"]
edition = "2021"
repository = "https://github.com/dspicher/ur-rs/"

[dependencies]
bitcoin_hashes = {version = "0.12", default-features = false}
crc = "3"
minicbor = { version = "0.19", features = ["alloc"] }
phf = { version = "0.11", features = ["macros"], default-features = false }
rand_xoshiro = "0.6"

[dev-dependencies]
hex = "0.4"
qrcode = { version = "0.12", default-features = false }

[features]
default = ["std"]
no_std = []
std = []