[workspace]
members = ["examples/wasm", "fuzz"]

[package]
name = "ur"
description = "A Rust implementation of Uniform Resources"
license = "MIT"
version = "0.4.1"
authors = ["Dominik Spicher <dominikspicher@gmail.com>"]
edition = "2021"
repository = "https://github.com/dspicher/ur-rs/"

[dependencies]
bitcoin_hashes = { version = "0.16", default-features = false }
crc = "3"
minicbor = { version = "0.26", features = ["alloc"] }
rand_xoshiro = "0.7"

[dev-dependencies]
criterion = "0.6"
hex = "0.4"
qrcode = { version = "0.14", default-features = false }

[features]
default = ["std"]
std = []

[[bench]]
name = "decode"
harness = false
