
[package]
name = "ur"
description = "A Rust implementation of Uniform Resources"
license = "MIT"
version = "0.4.1"
authors = ["Dominik Spicher <dominikspicher@gmail.com>"]
edition = "2024"
repository = "https://github.com/dspicher/ur-rs/"
[workspace]
members = ["examples/wasm", "fuzz"]

[features]
default = ["std"]
std = []

[dependencies]
bitcoin_hashes = { version = "0.16", default-features = false }
crc = "3"
minicbor = { version = "1.0", features = ["alloc"] }
rand_xoshiro = "0.7"

[dev-dependencies]
criterion = "0.6"
hex = "0.4"
qrcode = { version = "0.14", default-features = false }

[[bench]]
name = "decode"
harness = false
