[package]
name = "wasm"
license = "MIT"
version = "0.1.0"
authors = ["Dominik Spicher <dominikspicher@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.22"
gloo = "0.11"
js-sys = "0.3"
qrcode-generator = "5"
ur = { path = "../.." }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
yew = { version = "0.21", features = ["csr"] }
